# python-qt6widgets

./: pyproject.toml
src/QtPyEqualizer/equalizer_bar/: demo.py
